# ses_sandbox

./: makefile  pyproject.toml
ses_sandbox/: main.py  ses_client.py
